# finetuner

./: .gitignore  README.md  finetuner.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: sample_sft.jsonl
assets/datasets/: arc_sample.jsonl  gsm8k_sample.jsonl  hellaswag_sample.jsonl  mmlu_sample.jsonl
docs/: ARCHITECTURE.md  RESEARCH.md
finetuner/: __init__.py  __main__.py  app.py
finetuner/analysis/: __init__.py  artifacts.py  config.py  reducers.py  runner.py
finetuner/core/: artifacts.py  config_store.py  download_worker.py  hf_download.py  job.py  model_catalog.py  model_validation.py  paths.py  project_state.py  queue.py
finetuner/datasets/: hf_datasets.py  loader.py  presets.py
finetuner/distillation/: __init__.py  config.py  domains.py  pipeline.py  runner.py
finetuner/eval/: runner.py  tasks.py
finetuner/monitor/: stats.py
finetuner/quantization/: __init__.py  planner.py  runner.py  specs.py
finetuner/training/: common.py  dataset_formats.py  methods.py  rewards.py  runner.py  sft.py  validation.py
finetuner/ui/: analysis_tab.py  branding.py  deployment_tab.py  distillation_tab.py  evals_tab.py  main_window.py  models_tab.py  monitor_tab.py  pipeline_context.py  project_tab.py  results_tab.py  theme.py  training_tab.py  workflows_tab.py
finetuner/workflows/: __init__.py  executor.py  preflight.py  runtime.py  schema.py  templates.py
scripts/: build_windows.ps1  create_desktop_shortcut.ps1  finetuner_installer.iss  install_gpu.ps1
tests/: conftest.py  test_analysis.py  test_artifacts.py  test_config.py  test_dataset_formats.py  test_distillation.py  test_model_catalog.py  test_model_validation.py  test_paths.py  test_preflight.py  test_project_state.py  test_quantization.py  test_queue_integration.py  test_training_validation.py  test_ui_smoke.py  test_workflows.py
